Tue Jun  7 09:26:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* regenc.c (onigenc_not_support_case_map): Rewrite to work correctly
	  in ASCII range.

Mon Jun  6 23:00:00 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* appveyor.yml: Update libressl version to 2.3.5.

Mon Jun  6 18:37:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_throw_start): check if the iseq is symbol
	  proc, class definition should not be a symbol proc.
	  [ruby-core:75856] [Bug #12462]

Mon Jun  6 18:36:34 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Added UTF-16BE/LE and UTF-32BE/LE to supported encodings
	  for Unicode case mapping.

	* test/ruby/enc/test_case_comprehensive.rb: Tests for above
	  functionality; fixed an encoding issue in assertion error message.

Mon Jun  6 17:29:35 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_comprehensive.rb: Speed up testing for small
	  encodings by preselecting codepoints.

Mon Jun  6 17:10:50 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_cipher.c (ossl_cipher_free): Use EVP_CIPHER_CTX_free()
	  to free EVP_CIPHER_CTX allocated by EVP_CIPHER_CTX_new().
	  [ruby-core:75225] [Feature #12324]

Mon Jun  6 13:37:08 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c Change rb_str_casemap to use encoding primitive
	  case_map instead of directly calling onigenc_unicode_case_map.

Mon Jun  6 13:16:46 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb:
	  Remove :lithuanian guard for Unicode case mapping.

Mon Jun  6 10:39:56 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/openssl_missing.h: Include ruby/config.h. r55285 added
	  some inline functions but VC does not recognize 'inline' keyword.

Mon Jun  6 09:25:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): report raised exception if
	  report_on_exception flag is set.  [Feature #6647]

Mon Jun  6 01:36:24 2016  Kazuki Yamaguchi  <k@rhe.jp>
